archive/도커심화_한권으로_배우는_도커_&_쿠버네티스/ch09/ex14/ingress02-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deploy-test02
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: web-deploy02
  template:
    metadata:
      labels:
         app.kubernetes.io/name: web-deploy02
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
