archive/도커심화_한권으로_배우는_도커_&_쿠버네티스/ch09/ex14/ingress01-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-service-test01
spec:
  selector:
    app.kubernetes.io/name: web-deploy01
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
