archive/도커심화_한권으로_배우는_도커_&_쿠버네티스/ch09/ex14/ingress02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test02	
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /test01
        pathType: Prefix
        backend:
          service:
            name: ingress-service-test01
            port:
              number: 80
      - path: /test02	
        pathType: Prefix
        backend:
          service:
            name: ingress-service-test02
            port:
              number: 80
